--- a/CheckPresFirst/pom.xml
+++ b/CheckPresFirst/pom.xml
@@ -40,11 +40,11 @@
         </dependency>
 
         <!--mysql驱动包-->
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.35</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.mchange</groupId>
